--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,3 +1,9 @@
 <h1>All Customers</h1>
 
-<%= render 'customer', customers: @customers %>
+<p>
+  <%= link_to "Home", root_path %> |
+  <%= link_to "Alphabetized", alphabetized_path %> |
+  <%= link_to "Missing Email", missing_email_path %>
+</p>
+
+<%= render partial: 'customer', object: @customers, locals: {show_link: false} %>
