--- a/app/views/customers/missing_email.html.erb
+++ b/app/views/customers/missing_email.html.erb
@@ -1,3 +1,9 @@
 <h1>Missing Email</h1>
 
+<p>
+  <%= link_to "Home", root_path %> |
+  <%= link_to "Alphabetized", alphabetized_path %> |
+  <%= link_to "Missing Email", missing_email_path %>
+</p>
+
 <%= render 'customer', customers: @customers %>
